force-app/main/default/objects/Case/fields/Field_X__c.field-meta.xml
<CustomField>
    <fullName>Field_X__c</fullName>
    <label>Field X</label>
    <length>30</length>
    <type>Text</type>
</CustomField>