force-app/main/default/objects/Case/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <label>Priority Level</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>